OMG MLG 420 FIXED

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(4_1_1)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(4_1_1 main.cpp cl_application.cpp cl_application.h cl_base.cpp cl_base.h)
+add_executable(4_1_1 main.cpp cl_application.cpp cl_application.h cl_base.cpp cl_base.h child.h)
